# 4D-Multilayer-Modeler

./: .ccls  .clang-format  .gitignore  4d_modeler.cpp  CMakeLists.txt  README.md  bezier.cpp  bezier.h  graddesc.cpp  graddesc.h  raytrace.cpp  raytrace.h  scene.cpp  scene.h  spline.cpp  spline.h  util.cpp  util.h  widget.cpp  widget.h  widget.ui
input/: 20x20.txt  4x4x4.txt  4x6.txt  egg_chair.txt  hp_smf.txt  iris.txt  multistep_beznodes.txt  not_egg_chair.txt  original_beznodes.txt  pringle.txt  sheet.txt  smf_fem_torso.txt  smf_head.txt  smf_male_torso.txt  smf_sphere.txt  strip.txt
input/patches/: BezPatch0.txt  basicCurved.txt  flatPatch2Edges.txt  patchPointsIrisPetal.txt  patchPointsPringle.txt
input/smf_configs/: bear.txt  fem_torso.txt  head.txt  hp.txt  male_torso.txt  mask.txt  sphere.txt
lib/libShapeOp/: CMakeLists.txt
lib/libShapeOp/bindings/: CMakeLists.txt
lib/libShapeOp/src/: Constraint.cpp  Constraint.h  LSSolver.h  Solver.cpp  Solver.h  Types.h
